SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_9.lang
var x = 9 var y = 10;